--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -58,3 +58,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: target/site/allure-maven-plugin
+
+      - name: 📋 Add report link to summary
+        if: always()
+        run: |
+          echo "### ✅ [Click to view Allure Report](https://elena-balakina.github.io/Restful-booker-lombok/)" >> $GITHUB_STEP_SUMMARY
