--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -59,6 +59,11 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: target/site/allure-maven-plugin
 
+      - name: 📎 Print link to Allure report
+        if: always()
+        run:
+          echo "🔗 Allure Report: https://elena-balakina.github.io/Restful-booker-lombok/"
+
       - name: 📋 Add report link to summary
         if: always()
         run: |
